--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet" />
     <title>React App</title>
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=	d872a2d219ceed5d652af375d65c517c&autoload=false"></script>
   </head>
   <body style="margin: 0; padding: 0; font-family: 'Noto Sans KR', sans-serif !important">
     <noscript>You need to enable JavaScript to run this app.</noscript>
