Feat: 모달 애니메이션 구현

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,10 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet" />
     <title>React App</title>
-    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=	my_key&autoload=false"></script>
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=	6b1955b6d295b66fba097ee823705d7a&autoload=false"
+    ></script>
   </head>
   <body style="margin: 0; padding: 0; font-family: 'Noto Sans KR', sans-serif !important">
     <noscript>You need to enable JavaScript to run this app.</noscript>
